# 3D-particle-renderer

./: .gitignore  CMakeLists.txt  README.md  howToRun.md
src/: main.cpp
src/app/: Application.cpp  Application.h  Camera.cpp  Camera.h
src/render/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/render/shaders/: basic.frag  basic.vert  grid.frag  grid.vert  particle.frag  particle.vert
src/sim/: Particle.h  ParticleSystem.cpp  ParticleSystem.h
